unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/ET_Special_Workforce_Requirement__c.object-meta.xml
<CustomObject>
    <label>Special Workforce Requirement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Specific Workforce Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Special Workforce Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>