unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/ET_Accommodation_Allowance_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Accommodation_Allowance_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accommodation Allowance Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>