unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/ET_Extra_Certification__c.field-meta.xml
<CustomField>
    <fullName>ET_Extra_Certification__c</fullName>
    <label>Extra Certification</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>