unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/ET_Extra_Certification_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Extra_Certification_Cost_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Extra Certification Cost Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>