unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/ET_Over_Time__c.field-meta.xml
<CustomField>
    <fullName>ET_Over_Time__c</fullName>
    <label>Over Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>