unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/ET_Smart_Phone__c.field-meta.xml
<CustomField>
    <fullName>ET_Smart_Phone__c</fullName>
    <label>Smart Phone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>