unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/ET_Specific_Base_Salary__c.field-meta.xml
<CustomField>
    <fullName>ET_Specific_Base_Salary__c</fullName>
    <label>Specific Base Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>