unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/ET_Specific_Leave_Plan__c.field-meta.xml
<CustomField>
    <fullName>ET_Specific_Leave_Plan__c</fullName>
    <label>Specific Leave Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 month every year</fullName>
            </value>
            <value>
                <fullName>1 month every 6 months</fullName>
            </value>
            <value>
                <fullName>1 month every 4 months</fullName>
            </value>
            <value>
                <fullName>1 month every 3 months</fullName>
            </value>
            <value>
                <fullName>Half month every 6 months</fullName>
            </value>
            <value>
                <fullName>Half month every 4 months</fullName>
            </value>
            <value>
                <fullName>Half month every 3 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>