unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/Language_and_Psychometric_Fee_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Language_and_Psychometric_Fee_Cost_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Language and Psychometric Fee Cost Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>