unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/Language_and_Psychometric_Test_Fee__c.field-meta.xml
<CustomField>
    <fullName>Language_and_Psychometric_Test_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Language and Psychometric Test Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>