unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/Social_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Social_Allowance__c</fullName>
    <label>Social Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>