unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/Training_and_Licensing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Training_and_Licensing_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Training and Licensing Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>