unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/Training_and_Licensing_Cost_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_and_Licensing_Cost_Cost_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Training and Licensing Cost Cost Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>