unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/Work_force_Request__c.field-meta.xml
<CustomField>
    <fullName>Work_force_Request__c</fullName>
    <label>Work force Request</label>
    <referenceTo>ET_Work_force__c</referenceTo>
    <relationshipName>Specific_Workforce_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>