unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/Workforce_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Record_Type_Name__c</fullName>
    <formula>Work_force_Request__r.ET_Workforce_Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workforce Record Type Name</label>
    <type>Text</type>
</CustomField>