unpackaged/main/default/objects/ET_Special_Workforce_Requirement__c/fields/Workforce_Type__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workforce Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>